--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		</div>
 		-->
 	</header>
-	<!--bla bla bla-->
+	
 	<main>
 		<section class="game-section">
 			<div class="game-image">
@@ -123,3 +123,5 @@
 	<script src="main.js"></script>
 </body>
 </html>
+
+<!--hello there-->
